<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.AddPostPage">

    <View
        android:id="@+id/blueSpace2"
        android:layout_width="match_parent"
        android:layout_height="59sp"
        android:background="@color/appThemeC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fixTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="46sp"
        android:text="@string/new_post"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blueSpace2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/chooseCaseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="85sp"
                android:text="@string/title"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="68sp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/title"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/chooseCaseTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chooseAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/age"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseCaseTitle" />

            <EditText
                android:id="@+id/editAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="3sp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/age"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/chooseAge"
                app:layout_constraintTop_toBottomOf="@+id/editTitle" />

            <TextView
                android:id="@+id/chooseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/amount"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseAge" />

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="3sp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/amount"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/chooseAmount"
                app:layout_constraintTop_toBottomOf="@+id/editAge" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/case_description"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseCity" />


            <View
                android:id="@+id/backSpace"
                android:layout_width="380sp"
                android:layout_height="350sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/chooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/date"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseAmount" />

            <EditText
                android:id="@+id/DD"
                android:layout_width="78sp"
                android:layout_height="49sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="3sp"
                android:ems="10"
                android:inputType="text"
                android:hint="DD"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/chooseDate"
                app:layout_constraintTop_toBottomOf="@+id/editAmount" />

            <EditText
                android:id="@+id/MM"
                android:layout_width="78sp"
                android:layout_height="49sp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="8sp"
                android:ems="10"
                android:inputType="text"
                android:hint="MM"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/DD"
                app:layout_constraintStart_toEndOf="@+id/DD" />

            <EditText
                android:id="@+id/YYYY"
                android:layout_width="78sp"
                android:layout_height="49sp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="8sp"
                android:ems="10"
                android:inputType="text"
                android:hint="YYYY"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/DD"
                app:layout_constraintStart_toEndOf="@+id/MM" />

            <TextView
                android:id="@+id/chooseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/scam_type"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseDate" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginStart="24sp"
                android:layout_marginTop="0sp"
                android:layout_weight="1"
                android:entries="@array/type_array"
                app:layout_constraintStart_toEndOf="@+id/chooseType"
                app:layout_constraintTop_toBottomOf="@+id/DD" />

            <TextView
                android:id="@+id/choosePayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/payment_method"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseType" />

            <Spinner
                android:id="@+id/spinner_payment"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginStart="24sp"
                android:layout_marginTop="2sp"
                android:layout_weight="1"
                android:entries="@array/payment_array"
                app:layout_constraintStart_toEndOf="@+id/choosePayment"
                app:layout_constraintTop_toBottomOf="@+id/spinner_type" />

            <TextView
                android:id="@+id/chooseContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/contact_method"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choosePayment" />

            <Spinner
                android:id="@+id/spinner_contact"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginStart="24sp"
                android:layout_marginTop="2sp"
                android:layout_weight="1"
                android:entries="@array/contact_array"
                app:layout_constraintStart_toEndOf="@+id/chooseContact"
                app:layout_constraintTop_toBottomOf="@+id/spinner_payment" />

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginStart="24sp"
                android:layout_marginTop="1sp"
                android:layout_weight="1"
                android:entries="@array/city_array"
                app:layout_constraintStart_toEndOf="@+id/chooseCity"
                app:layout_constraintTop_toBottomOf="@+id/spinner_contact" />

            <TextView
                android:id="@+id/chooseCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16sp"
                android:layout_marginTop="22sp"
                android:text="@string/city"
                android:textColor="@color/appThemeC"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseContact" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="1sp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backSpace" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="370dp"
                android:layout_height="342dp"
                android:layout_margin="4sp"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:hint="@string/type_here"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/backSpace"
                app:layout_constraintHorizontal_bias="2"
                app:layout_constraintStart_toStartOf="@+id/backSpace"
                app:layout_constraintTop_toTopOf="@+id/backSpace" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/close2"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="13sp"
        android:contentDescription="@string/close_profile"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blueSpace2"
        app:srcCompat="@drawable/close" />


</androidx.constraintlayout.widget.ConstraintLayout>